<resources>
    <string name="app_name">TrackWise - Budget Tracker</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="graph">Graph</string>
    <string name="settings">Settings</string>
    <string name="trackwise_budget_tracker">Trackwise - Budget Tracker</string>
    <string name="groceries">Groceries</string>
    <string name="education">Education</string>
    <string name="bills">Bills</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="repairs">Repairs</string>
    <string name="gifts">Gifts</string>
    <string name="others">Others</string>
    <string name="expenses">Expenses</string>
    <string name="vacations">Vacations</string>
    <string name="pets">Pets</string>
    <string name="image">image</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="_0_00">₹ 0.00</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="settings_page">Settings Page</string>
</resources>