<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layout_home"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trackwise_budget_tracker"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/expenses"
                android:layout_marginTop="8dp"
                android:textSize="16sp">
            </TextView>

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:columnCount="2"
                android:rowCount="2"
                android:alignmentMode="alignMargins"
                android:useDefaultMargins="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/grocery"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/grocery" />

                    <TextView
                        android:id="@+id/grocery_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/groceries"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/education"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/education"/>

                    <TextView
                        android:id="@+id/education_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/education"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/bills"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/bills" />

                    <TextView
                        android:id="@+id/bills_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bills"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/food"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/food" />

                    <TextView
                        android:id="@+id/food_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/travel"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/travel" />

                    <TextView
                        android:id="@+id/travel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/travel"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/repairs"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/repairs" />

                    <TextView
                        android:id="@+id/repairs_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repairs"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/vacations"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/vacation" />

                    <TextView
                        android:id="@+id/vacations_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacations"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/pets"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/pets" />

                    <TextView
                        android:id="@+id/pets_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pets"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/gifts"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/gifts" />

                    <TextView
                        android:id="@+id/gifts_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gifts"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/others"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/others" />

                    <TextView
                        android:id="@+id/others_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

            </GridLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:padding="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/graphRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_settings"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:text="@string/settings_page"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />
</LinearLayout>
